fix some alignments

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -16,8 +16,7 @@ header
 
 footer
   @extend .text-block
-  margin: 0 auto
-  width: 110px
+  text-align: center
 
 ::selection
   background: #eb5f3a
